; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_base.c_base_boot.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_base.c_base_boot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@base_mtx = common dso_local global i32 0, align 4
@base_avail_szad = common dso_local global i32 0, align 4
@base_nodes = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @base_boot() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 @malloc_mutex_init(i32* @base_mtx)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %7

5:                                                ; preds = %0
  %6 = call i32 @extent_tree_szad_new(i32* @base_avail_szad)
  store i32* null, i32** @base_nodes, align 8
  store i32 0, i32* %1, align 4
  br label %7

7:                                                ; preds = %5, %4
  %8 = load i32, i32* %1, align 4
  ret i32 %8
}

declare dso_local i64 @malloc_mutex_init(i32*) #1

declare dso_local i32 @extent_tree_szad_new(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
